# presemd

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GALLERY.md  LICENSE.md  README.md  adopting-git-flow.md  gallery.md  git-flow-proposal.md  image-generation.md  presentation.md  visualization-opportunities.md  visualization-opportunities.md 18-08-41-487.md
.claude/skills/release/: SKILL.md
.github/workflows/: release.yml
crates/mdeck/: Cargo.toml
crates/mdeck/doc/: ai-reference-supplement.md  architecture-diagrams.md  mdeck-spec.md
crates/mdeck/src/: app.rs  check.rs  cli.rs  config.rs  incident_log.rs  main.rs  prompt.rs  theme.rs
crates/mdeck/src/commands/: ai.rs  check.rs  config.rs  create.rs  export.rs  generate.rs  generate_icons.rs  mod.rs  skill.rs  spec.rs
crates/mdeck/src/parser/: blocks.rs  frontmatter.rs  mod.rs  splitter.rs
crates/mdeck/src/render/: image_cache.rs  mod.rs  text.rs
crates/mdeck/src/render/diagram/: mod.rs
crates/mdeck/src/render/diagram/routing/: graph.rs  lanes.rs  mod.rs  search.rs  serialize.rs  types.rs
crates/mdeck/src/render/diagram/routing/tests/: complex.rs  crossings.rs  crowded.rs  determinism.rs  edge_cases.rs  invalid.rs  mod.rs  serialization.rs  simple.rs
crates/mdeck/src/render/layouts/: bullet.rs  code.rs  content.rs  diagram.rs  gallery.rs  image_split.rs  mod.rs  quote.rs  visualization.rs
crates/mdeck/src/render/visualizations/: bar_chart.rs  donut_chart.rs  funnel_chart.rs  gantt_chart.rs  git_graph.rs  kpi_cards.rs  line_chart.rs  mod.rs  org_chart.rs  pie_chart.rs  progress_bars.rs  radar_chart.rs  scatter_plot.rs  stacked_bar.rs  timeline.rs  venn_diagram.rs  word_cloud.rs
crates/presemd/: Cargo.toml
crates/presemd/src/: main.rs
doc/: presemd-spec.md
sample-presentations/: gallery.md  introducing-mdeck.md  test-all-visualizations.md  test-bullet.md  test-content.md  test-diagram.md  test-gallery.md  test-image-generation.md  test-image-layouts.md  test-image.md  test-title.md  test-transition-slide.md  test-transition-spatial.md  test-two-column.md  test-visualizations.md  test-viz-donutchart.md  test-viz-gantt.md  test-viz-orgchart.md  test-viz-progress.md  test-viz-radar.md  test-viz-wordcloud.md
samples/: continents.md  gallery.md  introducing-mdeck.md  poker-night.md  saloon-workshop.md
samples/features/: notes.md
samples/layouts/: bullet.md  code.md  gallery.md  image-generation.md  image-layouts.md  image.md  layouts.md  quote.md  section.md  title.md
samples/transitions/: fade.md  none.md
samples/visualizations/: all.md  architecture.md  barchart.md  funnel.md  gitgraph.md  kpi.md  linechart.md  piechart.md  scatter.md  stacked-bar.md  timeline.md  venn.md
