[package]
name = "mdeck"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "A markdown-based presentation tool"
readme = "../../README.md"
keywords = ["markdown", "presentation", "slides"]
categories = ["command-line-utilities"]

[[bin]]
name = "mdeck"
path = "src/main.rs"

[dependencies]
eframe.workspace = true
clap.workspace = true
clap_complete.workspace = true
serde.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
colored.workspace = true
inquire.workspace = true
dirs.workspace = true
regex.workspace = true
image.workspace = true
syntect.workspace = true
ureq.workspace = true
serde_json.workspace = true
base64.workspace = true
rayon.workspace = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/mdeck-v{ version }-{ target }.{ archive-format }"
bin-dir = "mdeck{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
